--- a/css/assemblaggio.css
+++ b/css/assemblaggio.css
@@ -1,10 +1,14 @@
 #images{
     width: 100%;
+    padding: 10px;
 }
 
 #images img{
     width: 300px;
     height: 400px;
-    margin: 10px;
+    margin: 5px;
     float: left;
+    padding: 10px;
+    margin-top: 20px;
+    border: 3px solid black;
 }
